[ 1757321 ] Path to ResourceLoader to accept any URL